--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -11,9 +11,21 @@ plugins {
     id 'java-library'
 }
 
+// Druid uses Java 8
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+    }
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+
+    // "hyperic:sigar, a transitive dependency of druid, cannot be found in maven central
+    maven {
+        url "https://repository.jboss.org/nexus/content/repositories/thirdparty-uploads/"
+    }
 }
 
 dependencies {
@@ -27,7 +39,13 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     // The dependency to import the Authorizer interface
-    implementation 'org.apache.druid:druid-server:0.22.1'
+    compileOnly 'org.apache.druid:druid:0.22.1'
+
+    // The dependency to import the Authorizer interface
+    compileOnly 'org.apache.druid:druid-core:0.22.1'
+
+    // The dependency to import the Authorizer interface
+    compileOnly 'org.apache.druid:druid-server:0.22.1'
 }
 
 tasks.named('test') {
