--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -13,10 +13,10 @@ plugins {
     id 'java-library-distribution'
 }
 
-// Druid uses Java 8
+// Druid 0.23.0 uses Java 11
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
+        languageVersion.set(JavaLanguageVersion.of(11))
     }
 }
 
@@ -47,14 +47,11 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     // The dependency to import the Authorizer interface
-    compileOnly 'org.apache.druid:druid:0.22.1'
+    compileOnly 'org.apache.druid:druid:0.23.0'
 
-    compileOnly 'org.apache.druid:druid-core:0.22.1'
+    compileOnly 'org.apache.druid:druid-core:0.23.0'
 
-    compileOnly 'org.apache.druid:druid-server:0.22.1'
-
-    // Http Client lib; We can't use java default because the new HttpClient is only available in Java 11
-    api 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
+    compileOnly 'org.apache.druid:druid-server:0.23.0'
 
     // For JSON serialize/deserialize in OPA communication
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
