--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 ---
-name: Java CI with Gradle
+name: Java CI with Maven
 
 on:
   push:
@@ -22,11 +22,11 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          cache: gradle
+          cache: maven
       - name: Set up OpenPolicyAgent
         run: |
-          curl -L -o opa https://openpolicyagent.org/downloads/v0.33.1/opa_linux_amd64_static
+          curl -L -o opa https://openpolicyagent.org/downloads/v0.46.1/opa_linux_amd64_static
           chmod +x opa
           sudo mv opa /usr/local/bin/opa
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Build with Maven
+        run: mvn -B package
