update to druid 26.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,12 @@
 
   <groupId>tech.stackable</groupId>
   <artifactId>druid-opa-authorizer</artifactId>
-  <version>0.4.0</version>
+  <version>0.5.0</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <druid.version>26.0.0</druid.version>
+    <jackson.version>2.13.3</jackson.version>
   </properties>
 
   <dependencies>
@@ -21,20 +23,20 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.3</version>
+      <version>${jackson.version}</version>
       <scope>compile</scope>
     </dependency>
     <!-- Druid dependencies, provided at runtime by Druid -->
     <dependency>
       <groupId>org.apache.druid</groupId>
-      <artifactId>druid-core</artifactId>
-      <version>24.0.0</version>
+      <artifactId>druid-processing</artifactId>
+      <version>${druid.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.druid</groupId>
       <artifactId>druid-server</artifactId>
-      <version>24.0.0</version>
+      <version>${druid.version}</version>
       <scope>provided</scope>
     </dependency>
     <!-- JUnit for unit testing -->
