--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,10 +7,9 @@ on:
   push:
     branches:
       - main
-      - staging
-      - trying
       - "renovate/**"
   pull_request:
+  merge_group:
 
 jobs:
   build:
