--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,17 +15,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@7dd9e2a3dc350cf687eb1b2a4fadfee8c8e49675 # v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
       - name: Set up JDK 11
-        uses: actions/setup-java@d854b6da19cdadd9a010605529e522c2393ebd38 # tag=v3
+        uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: maven
-      - name: Set up OpenPolicyAgent
-        run: |
-          curl -L -o opa https://openpolicyagent.org/downloads/v0.46.1/opa_linux_amd64_static
-          chmod +x opa
-          sudo mv opa /usr/local/bin/opa
       - name: Build with Maven
-        run: mvn -B package
+        run: mvn -B verify
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@c5ad0fd6b977364190852883b46728f25a9617c3
