--- a/pom.xml
+++ b/pom.xml
@@ -162,23 +162,6 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven-jar-plugin.version}</version>
-        <executions>
-          <execution>
-            <id>default-jar</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <phase>package</phase>
-            <configuration>
-              <classifier>${project.activeProfiles[0].id}</classifier>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>${maven-resources-plugin.version}</version>
       </plugin>
@@ -274,6 +257,13 @@
     </plugins>
   </build>
 
+  <!--
+  These profiles are here so it is easier to test whether a code change still works against all supported Druid versions.
+  For the last years the API interface to Druid didn't change and while the versions of dependencies changed and even the location of classes in JARs the actual interface did not.
+  In a compiled Java class the bytecode refers to a String constant of the class it needs to access (e.g. org/apache/druid/server/security/Action) and as long as that name (and its interface) does not change it does not matter in which JAR file the code lives.
+  Using these profiles we can get clean compiles against all supported versions but we only use those for CI.
+  The actual final compilation will only happen against a single version and for that we chose the latest Druid version we support.
+  -->
   <profiles>
     <profile>
       <id>druid-023</id>
@@ -328,6 +318,9 @@
     </profile>
     <profile>
       <id>druid-27</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <properties>
         <druid.version>27.0.0</druid.version>
         <guava.version>19.0</guava.version>
