--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
-    <tag>HEAD</tag>
     <url>git@github.com:lfrancke/druid-opa-authorizer.git</url>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub</system>
@@ -194,6 +194,8 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>${maven-release-plugin.version}</version>
         <configuration>
+          <!-- We do not currently want to publish the results in a Maven repo and release will fail if the repositories aren't specified -->
+          <arguments>-Dmaven.deploy.skip=true</arguments>
           <scmCommentPrefix>[ci skip]</scmCommentPrefix>
           <tagNameFormat>@{project.version}</tagNameFormat>
         </configuration>
