--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
-    <url>git@github.com:lfrancke/druid-opa-authorizer.git</url>
     <tag>HEAD</tag>
+    <url>git@github.com:lfrancke/druid-opa-authorizer.git</url>
   </scm>
   <issueManagement>
     <system>GitHub</system>
@@ -156,8 +156,8 @@
         <version>${maven-enforcer-plugin.version}</version>
         <configuration>
           <rules>
-            <banDuplicatePomDependencyVersions />
-            <banDynamicVersions />
+            <banDuplicatePomDependencyVersions></banDuplicatePomDependencyVersions>
+            <banDynamicVersions></banDynamicVersions>
             <requireActiveProfile>
               <profiles>druid-023,druid-24,druid-26,druid-27</profiles>
               <all>false</all>
@@ -168,7 +168,7 @@
             <requireMavenVersion>
               <version>3.3.9</version>
             </requireMavenVersion>
-            <requirePluginVersions />
+            <requirePluginVersions></requirePluginVersions>
           </rules>
         </configuration>
         <executions>
@@ -242,8 +242,8 @@
             <cleanthat>
               <version>${cleanthat.version}</version>
             </cleanthat>
-            <removeUnusedImports />
-            <formatAnnotations />
+            <removeUnusedImports></removeUnusedImports>
+            <formatAnnotations></formatAnnotations>
             <googleJavaFormat>
               <version>${google-java-format.version}</version>
             </googleJavaFormat>
@@ -252,16 +252,16 @@
             <includes>
               <include>**/*.md</include>
             </includes>
-            <flexmark />
+            <flexmark></flexmark>
           </markdown>
           <json>
             <includes>
               <include>src/**/*.json</include>
             </includes>
-            <jackson />
+            <jackson></jackson>
           </json>
           <pom>
-            <sortPom />
+            <sortPom></sortPom>
           </pom>
         </configuration>
         <executions>
