--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           git-release-bot-email: "info@stackable.tech"
           maven-args: "clean install -Dmaven.plugin.validation=VERBOSE"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          maven-development-version-number: ${{ github.event.inputs.development-version }}
+          maven-development-version-number: ${{ github.event.inputs.development-version }}-SNAPSHOT
           maven-release-version-number: ${{ github.event.inputs.release-version }}
           release-branch-name: "main"
 
