--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>tech.stackable</groupId>
   <artifactId>druid-opa-authorizer</artifactId>
-  <version>234</version>
+  <version>345-SNAPSHOT</version>
   <!-- The version of the OPA Authorizer coincides with the Stackable Data Platform (SDP) version -->
 
   <name>Apache Druid OpenPolicyAgent Authorizer</name>
@@ -21,7 +21,7 @@
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
-    <tag>234</tag>
+    <tag>HEAD</tag>
     <url>git@github.com:lfrancke/druid-opa-authorizer.git</url>
   </scm>
   <issueManagement>
@@ -156,10 +156,10 @@
         <version>${maven-enforcer-plugin.version}</version>
         <configuration>
           <rules>
-            <banDuplicatePomDependencyVersions/>
-            <banDynamicVersions/>
-            <banDuplicatePomDependencyVersions/>
-            <banDynamicVersions/>
+            <banDuplicatePomDependencyVersions />
+            <banDynamicVersions />
+            <banDuplicatePomDependencyVersions />
+            <banDynamicVersions />
             <requireActiveProfile>
               <profiles>druid-023,druid-24,druid-26,druid-27</profiles>
               <all>false</all>
@@ -170,7 +170,7 @@
             <requireMavenVersion>
               <version>3.3.9</version>
             </requireMavenVersion>
-            <requirePluginVersions/>
+            <requirePluginVersions />
           </rules>
         </configuration>
         <executions>
@@ -244,8 +244,8 @@
             <cleanthat>
               <version>${cleanthat.version}</version>
             </cleanthat>
-            <removeUnusedImports/>
-            <formatAnnotations/>
+            <removeUnusedImports />
+            <formatAnnotations />
             <googleJavaFormat>
               <version>${google-java-format.version}</version>
             </googleJavaFormat>
@@ -254,13 +254,13 @@
             <includes>
               <include>**/*.md</include>
             </includes>
-            <flexmark/>
+            <flexmark />
           </markdown>
           <json>
             <includes>
               <include>src/**/*.json</include>
             </includes>
-            <jackson/>
+            <jackson />
           </json>
           <pom>
             <sortPom>
