--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,3 +32,12 @@ jobs:
           maven-development-version-number: ${{ github.event.inputs.development-version }}-SNAPSHOT
           maven-release-version-number: ${{ github.event.inputs.release-version }}
           release-branch-name: "main"
+      - name: Release to GitHub
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/release')
+        with:
+          files: |
+            target/*.jar
+            target/bom.*
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: release/${{ github.event.inputs.release-version }}
