--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,3 +41,5 @@ jobs:
             target/bom.*
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: release/${{ github.event.inputs.release-version }}
+          generate_release_notes: true
+          name: ${{ github.event.inputs.release-version }}
