--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           maven-release-version-number: ${{ github.event.inputs.release-version }}
           release-branch-name: "main"
       - run: tree
-      - run: git switch release/${{ github.event.inputs.release-version }}
+      - run: git checkout release/${{ github.event.inputs.release-version }}
       - run: mvn clean verify
       - name: Release to GitHub
         uses: softprops/action-gh-release@v1
