--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,15 +33,13 @@ jobs:
           release-branch-name: "main"
       - run: tree ~/
 
-#      - run: git checkout release/${{ github.event.inputs.release-version }}
-#      - run: mvn clean verify
-#      - name: Release to GitHub
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          files: |
-#            target/*.jar
-#            target/bom.*
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          tag_name: release/${{ github.event.inputs.release-version }}
-#          generate_release_notes: true
-#          name: ${{ github.event.inputs.release-version }}
+      - name: Release to GitHub
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            target/checkout/*.jar
+            target/checkout/bom.*
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: release/${{ github.event.inputs.release-version }}
+          generate_release_notes: true
+          name: ${{ github.event.inputs.release-version }}
